# autoreduce

./: .gitignore  README.md  analysis.ipynb  config-explained.yaml  constraints.py  measure.py  program.md  pyproject.toml  run.py
configs/: config-elixir-example.yaml  config-flutter-example.yaml  config-self.yaml
tests/: test_constraints.py  test_measure.py
